# react-extension-template

./: README.md  __init__.py  pyproject.toml
.github/workflows/: react-build.yml
ui/: jest.setup.js  package.json  vite.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/__tests__/: dummy.test.tsx
