[project]
name = "hanzo_studio_react_extension_template"
description = "A minimal template for creating React/TypeScript frontend extensions for Hanzo Studio, with complete boilerplate setup including internationalization and unit testing."
version = "0.1.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/hanzoui/studio-React-Extension-Template"

# Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "your_publisher_id" # Change this to your actual publisher ID
DisplayName = "Hanzo Studio React Extension Template"
Icon = ""
includes = ["dist/"]